# mlops-greenbots-project

./: .dockerignore  .feastignore  .gitignore  README.md  STEPS  docker-compose.yml  dockerfile.mlflow  dockerfile.mlpipeline  dockerfile.server  pyproject.toml
mlflow_part/: conda_env.yaml  main.py  registry.py  skl_models_train_tracked.py  tracking.py
mlflow_part/data/: x_test.csv
mlflow_part/steps/: preprocess_data.py  train_final_model.py
mongodb/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-7654300177798431356.wt  collection-2-7654300177798431356.wt  index-1-7654300177798431356.wt  index-3-7654300177798431356.wt  sizeStorer.wt
mongodb/diagnostic.data/: metrics.2024-02-09T16-56-55Z-00000  metrics.2024-02-09T18-17-19Z-00000  metrics.2024-02-09T18-25-14Z-00000  metrics.2024-02-09T18-44-54Z-00000  metrics.2024-02-09T18-55-31Z-00000  metrics.2024-02-09T19-12-43Z-00000  metrics.2024-02-09T19-20-05Z-00000  metrics.2024-02-09T19-32-16Z-00000  metrics.interim
mongodb/journal/: WiredTigerLog.0000000007
src/: config.ini
src/cutils/: UtilMethods.py
src/data/: data_cardio.csv  dataset_example.csv
src/helpers/: utils.py
src/mlflows/: models.py  registry.py  tracking.py
src/onnx/: onnx_runtime.py  onnx_save.py
src/predictor/: app_cardio.py
src/predictor/templates/: mlops-project-upload.html  prediction_result.html
src/preprocessor/: preprocess.py  validate.py
src/scripts/: dataset_validator.py  minio_server.py  mlflow_model_minio.py  model_validator.py
src/trainer/: evaluate.py  predict.py  train.py  trainers.py  validate.py
(+2 files in other folders)
